--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Email: tamires.luz.batista@gmail.com</p>
         <a href="https://www.linkedin.com/in/tamireslb/" target="_blank">LinkedIn</a>
         <a href="http://lattes.cnpq.br/0955881702887479" target="_blank">Currículo Lattes</a>
-        <a href="https://github.com/Ey1902" target="_blank">Github</a>
+        <a href="https://github.com/TamLuz" target="_blank">Github</a>
     </section>
     <section>
         <div class="topico">
